@@ -188,14 +188,17 @@ namespace WTF {
         const UChar *e = src + srcLength;
         const UChar *s = src;
         UChar *r = result;
-        UChar *re = result + resultLength;
+        uint rindex = 0;
 
         // this avoids one out of bounds check in the loop
-        if (QChar(*s).isLowSurrogate())
-            *r++ = *s++;
+        if (s < e && QChar(*s).isLowSurrogate()) {
+            if (r)
+                r[rindex] = *s++;
+            ++rindex;
+        }
 
         int needed = 0;
-        while (s < e && r < re) {
+        while (s < e && (rindex < resultLength || !r)) {
             uint c = *s;
             if (QChar(c).isLowSurrogate() && QChar(*(s - 1)).isHighSurrogate())
                 c = QChar::surrogateToUcs4(*(s - 1), c);
@@ -210,25 +213,27 @@ namespace WTF {
                 }
                 qstring = qstring.toLower();
                 for (int i = 0; i < qstring.length(); ++i) {
-                    if (r == re) {
+                    if (rindex >= resultLength) {
                         needed += qstring.length() - i;
                         break;
                     }
-                    *r = qstring.at(i).unicode();
-                    ++r;
+                    if (r)
+                        r[rindex] = qstring.at(i).unicode();
+                    ++rindex;
                 }
             } else {
-                *r = *s + prop->lowerCaseDiff;
-                ++r;
+                if (r)
+                    r[rindex] = *s + prop->lowerCaseDiff;
+                ++rindex;
             }
             ++s;
         }
         if (s < e)
             needed += e - s;
         *error = (needed != 0);
-        if (r < re)
-            *r = 0;
-        return (r - result) + needed;
+        if (rindex < resultLength)
+            r[rindex] = 0;
+        return rindex + needed;
     }
 
     inline UChar32 toUpper(UChar32 ch)
@@ -241,14 +246,17 @@ namespace WTF {
         const UChar *e = src + srcLength;
         const UChar *s = src;
         UChar *r = result;
-        UChar *re = result + resultLength;
+        int rindex = 0;
 
         // this avoids one out of bounds check in the loop
-        if (QChar(*s).isLowSurrogate())
-            *r++ = *s++;
+        if (s < e && QChar(*s).isLowSurrogate()) {
+            if (r)
+                r[rindex] = *s++;
+            ++rindex;
+        }
 
         int needed = 0;
-        while (s < e && r < re) {
+        while (s < e && (rindex < resultLength || !r)) {
             uint c = *s;
             if (QChar(c).isLowSurrogate() && QChar(*(s - 1)).isHighSurrogate())
                 c = QChar::surrogateToUcs4(*(s - 1), c);
@@ -263,25 +271,27 @@ namespace WTF {
                 }
                 qstring = qstring.toUpper();
                 for (int i = 0; i < qstring.length(); ++i) {
-                    if (r == re) {
+                    if (rindex >= resultLength) {
                         needed += qstring.length() - i;
                         break;
                     }
-                    *r = qstring.at(i).unicode();
-                    ++r;
+                    if (r)
+                        r[rindex] = qstring.at(i).unicode();
+                    ++rindex;
                 }
             } else {
-                *r = *s + prop->upperCaseDiff;
-                ++r;
+                if (r)
+                    r[rindex] = *s + prop->upperCaseDiff;
+                ++rindex;
             }
             ++s;
         }
         if (s < e)
             needed += e - s;
         *error = (needed != 0);
-        if (r < re)
-            *r = 0;
-        return (r - result) + needed;
+        if (rindex < resultLength)
+            r[rindex] = 0;
+        return rindex + needed;
     }
 
     inline int toTitleCase(UChar32 c)
