@@ -1,3 +1,12 @@
+2008-05-23  Tor Arne Vestbø  <tavestbo@trolltech.com>
+
+        Reviewed by Simon.
+
+        Added a comment to the skipping of fast/css/case-transform.html that
+        mentions the reason of failure being a Qt bug.
+
+        * platform/qt/Skipped:
+
 2008-05-26  Tor Arne Vestbø  <tavestbo@trolltech.com>
 
         Reviewed by Simon
