@@ -1,3 +1,15 @@
+2008-05-23  Tor Arne Vestbø  <tavestbo@trolltech.com>
+
+        Reviewed by Simon.
+
+        Fixed toLower and toUpper implementations to allow being called
+        with a null result pointer and resultLength, to determine the
+        number of characters needed for the case conversion.
+
+        * wtf/unicode/qt4/UnicodeQt4.h:
+        (WTF::Unicode::toLower):
+        (WTF::Unicode::toUpper):
+
 2008-05-25  Alexey Proskuryakov  <ap@webkit.org>
 
         Fixing a typo in the previous commit made as a last minute change.
